--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,33 @@
 @import "bootstrap.css";
 @import "owl.theme.default.min.css";
 @import "owl.carousel.min.css";
+@font-face {
+  font-family: "20 Kopeek";
+  src: url("../fonts/20Kopeek.woff2") format("woff2"), url("../fonts/20Kopeek.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 .navbar-expand-lg .navbar-nav .nav-link {
   padding: 0;
 }
 
-.button {
-  padding: 23px 47px;
-  background-color: white;
-  border-radius: 40px;
-  text-decoration: none;
-  color: black;
-  display: inline-block;
-  transition: 0.4s;
+.height-100 {
+  height: 100vh;
 }
-.button:hover {
+
+.btn {
+  padding: 23px 47px;
+  transition: 0.33s;
+}
+.btn:hover {
+  transform: scale(1.05);
+  transition: 0.33s;
   text-decoration: none;
-  color: black;
-  transform: scale(1.15);
-  transition: transform 0.4s;
 }
 
 header {
-  z-index: 2;
+  z-index: 4;
 }
 header .navbar-logo-tagline {
   font-family: "20 Kopeek", sans-serif;
@@ -56,35 +61,31 @@ header .navbar-nav .nav-item:hover {
 }
 
 .main_section {
-  position: relative;
+  height: 100vh;
+}
+.main_section .h-100 {
+  height: 100vh;
+}
+.main_section .position-absolute {
+  z-index: 3;
 }
 .main_section .slide-one.owl-carousel .owl-nav, .main_section .slide-one.owl-carousel .owl-dots {
   display: none;
 }
-.main_section article {
-  position: absolute;
-  z-index: 5;
-  top: 380px;
-  left: 21%;
-}
-.main_section article h1 {
+.main_section h1 {
   color: black;
   font-family: "20 Kopeek", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 55px;
   line-height: 55px;
-  max-width: 600px;
   margin-bottom: 30px;
 }
-.main_section article h3 {
+.main_section h3 {
   font-family: "20 Kopeek", sans-serif;
   font-size: 34px;
   line-height: 37px;
   margin-bottom: 88px;
-}
-.main_section article a:first-of-type {
-  margin-right: 20px;
 }
 .main_section .main_banner {
   background-size: cover;
@@ -101,6 +102,106 @@ header .navbar-nav .nav-item:hover {
 }
 .main_section .main_banner.item4 {
   background-image: url(../images/4.jpg);
+}
+
+.company_style {
+  padding: 68px 0 134px;
+}
+.company_style_last_p {
+  background-color: #2B59C3;
+  padding: 11px 13px;
+  margin-left: -13px;
+  border-radius: 5px;
+}
+
+.portfolio {
+  padding: 0 0 100px;
+}
+.portfolio div.row {
+  margin-bottom: 100px;
+}
+.portfolio div.row:last-of-type {
+  margin: 0 0 53px;
+}
+.portfolio div.row div {
+  padding: 0;
+}
+.portfolio a {
+  margin-left: 59px;
+  text-decoration: none;
+}
+.portfolio a:last-of-type {
+  margin: 0;
+}
+.portfolio p {
+  margin: 0;
+}
+
+.logos_and_names p {
+  margin-bottom: 0;
+}
+.logos_and_names .logos_item {
+  top: -42px;
+  font-size: 55px;
+  font-family: "20 Kopeek", sans-serif;
+}
+.logos_and_names .logos_item2 {
+  font-family: "20 Kopeek", sans-serif;
+  font-size: 15px;
+  padding: 0;
+}
+
+.present {
+  padding-bottom: 77px;
+}
+.present .present_first_p {
+  background-color: #2B59C3;
+  padding: 11px 23px 18px 14px;
+  border-radius: 5px;
+  margin-left: -11px;
+}
+.present .present_first_p span {
+  font-size: 26px;
+}
+
+.form_call_back {
+  padding-bottom: 150px;
+}
+.form_call_back .form-check {
+  padding-left: 36px;
+}
+
+.stage {
+  padding-bottom: 150px;
+}
+
+.quality_assurance {
+  background-image: url("../images/quality.jpg");
+  background-size: cover;
+}
+.quality_assurance h3 {
+  margin-bottom: 83px;
+}
+.quality_assurance .quality_item_items {
+  font-size: 55px;
+  top: -45px;
+}
+
+.contact_us {
+  padding: 100px 0 127px;
+}
+
+footer .in_social_items {
+  background-color: #2B59C3;
+  border-radius: 10px;
+  margin: 0 2px 0;
+}
+footer .in_social_items a {
+  color: white;
+}
+footer a {
+  color: black;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=style.css.map */
