--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,14 @@
 @import "bootstrap.css";
 @import "owl.theme.default.min.css";
 @import "owl.carousel.min.css";
-
+@font-face {
+  font-family: '20 Kopeek';
+  src: url('../fonts/20Kopeek.woff2') format('woff2'),
+  url('../fonts/20Kopeek.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 $main_font: '20 Kopeek', sans-serif;
 $hover_header: #252323;
 $h1_color: black;
@@ -11,25 +18,25 @@ $color_link: black;
   padding: 0;
 }
 
-.button {
-  padding: 23px 47px;
-  background-color: white;
-  border-radius: 40px;
-  text-decoration: none;
-  color: $color_link;
-  display: inline-block;
-  transition: 0.4s;
-  &:hover {
-    text-decoration: none;
-    color: black;
-    transform: scale(1.15);
-    transition: transform 0.4s;
-  }
-
+.height-100 {
+  height: 100vh;
 }
 
+.btn {
+
+  padding: 23px 47px;
+  transition: 0.33s;
+
+  &:hover {
+    transform: scale(1.05);
+    transition: 0.33s;
+    text-decoration: none;
+  }
+}
+
+
 header {
-  z-index: 2;
+  z-index: 4;
 
   .navbar {
     &-logo-tagline {
@@ -46,15 +53,16 @@ header {
     .nav-item {
       font-family: $main-font;
       transition: 0.4s;
+      border: 1px solid white;
+      margin: 0 14px;
+      padding: 11px 15px;
+      border-radius: 50%;
+
       &:first-child {
         padding: 7px 27px 7px 33px;
         border-radius: 15px;
       }
 
-      border: 1px solid white;
-      margin: 0 14px;
-      padding: 11px 15px;
-      border-radius: 50%;
 
       &:last-child {
         padding: 11px;
@@ -64,6 +72,7 @@ header {
         display: block;
 
       }
+
       &:hover {
         border-color: $hover_header;
         transition: 0.4s;
@@ -73,40 +82,36 @@ header {
 }
 
 .main_section {
-  position: relative;
-  .slide-one.owl-carousel .owl-nav,.slide-one.owl-carousel .owl-dots{
+  height: 100vh;
+
+  .h-100 {
+    height: 100vh;
+  }
+
+  .position-absolute {
+    z-index: 3;
+  }
+
+  .slide-one.owl-carousel .owl-nav, .slide-one.owl-carousel .owl-dots {
     display: none;
   }
-  article {
-    position: absolute;
-    z-index: 5;
-    top: 380px;
-    left: 21%;
 
-    h1 {
-      color: $h1_color;
-      font-family: $main_font;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 55px;
-      line-height: 55px;
-      max-width: 600px;
-      margin-bottom: 30px;
-    }
-
-    h3 {
-      font-family: $main_font;
-      font-size: 34px;
-      line-height: 37px;
-      margin-bottom: 88px;
-    }
-
-    a:first-of-type {
-      margin-right: 20px;
-    }
-
+  h1 {
+    color: $h1_color;
+    font-family: $main_font;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 55px;
+    line-height: 55px;
+    margin-bottom: 30px;
   }
 
+  h3 {
+    font-family: $main_font;
+    font-size: 34px;
+    line-height: 37px;
+    margin-bottom: 88px;
+  }
 
   .main_banner {
     background-size: cover;
@@ -132,3 +137,133 @@ header {
   }
 }
 
+.company_style {
+  padding: 68px 0 134px;
+
+  &_last_p {
+    background-color: #2B59C3;
+    padding: 11px 13px;
+    margin-left: -13px;
+    border-radius: 5px;
+  }
+
+}
+
+.portfolio {
+  padding: 0 0 100px;
+
+  div.row {
+    margin-bottom: 100px;
+
+    &:last-of-type {
+      margin: 0 0 53px;
+    }
+
+    div {
+      padding: 0;
+    }
+
+  }
+
+  a {
+    margin-left: 59px;
+    text-decoration: none;
+
+    &:last-of-type {
+      margin: 0;
+    }
+  }
+
+  p {
+    margin: 0;
+  }
+}
+
+.logos_and_names {
+  p {
+    margin-bottom: 0;
+  }
+
+  .logos_item {
+    top: -42px;
+    font-size: 55px;
+    font-family: $main_font;
+  }
+
+  .logos_item2 {
+    font-family: $main_font;
+    font-size: 15px;
+    padding: 0;
+  }
+
+
+}
+
+.present {
+  padding-bottom: 77px;
+  .present_first_p{
+    background-color: #2B59C3;
+    padding: 11px 23px 18px 14px;
+    border-radius: 5px;
+    margin-left: -11px;
+    & span{
+      font-size: 26px;
+    }
+  }
+}
+
+.form_call_back {
+  .form-check {
+    padding-left: 36px;
+  }
+
+  padding-bottom: 150px;
+}
+
+.stage {
+  padding-bottom: 150px;
+}
+
+.dignity {
+
+}
+
+.quality_assurance {
+  background-image: url("../images/quality.jpg");
+  background-size: cover;
+
+  h3 {
+    margin-bottom: 83px;
+  }
+
+  .quality_item_items {
+    font-size: 55px;
+    top: -45px;
+  }
+}
+
+.contact_us {
+  padding: 100px 0 127px;
+}
+
+footer {
+
+  .in_social_items{
+    background-color: #2B59C3;
+    border-radius: 10px;
+    margin: 0 2px 0;
+
+
+    a{
+      color: white;
+      &:last-of-type{}
+    }
+
+  }
+  a{
+    color: black;
+    text-decoration: none;
+  }
+
+
+}
