--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,9 @@ header .navbar-nav .nav-item:hover {
 .company_style {
   padding: 68px 0 134px;
 }
+.company_style h3 {
+  font-size: 38px;
+}
 .company_style_last_p {
   background-color: #2B59C3;
   padding: 11px 13px;
@@ -120,6 +123,9 @@ header .navbar-nav .nav-item:hover {
 
 .portfolio {
   padding: 0 0 100px;
+}
+.portfolio h3 {
+  font-size: 45px;
 }
 .portfolio div.row {
   margin-bottom: 100px;
@@ -144,6 +150,9 @@ header .navbar-nav .nav-item:hover {
 .logos_and_names p {
   margin-bottom: 0;
 }
+.logos_and_names h2 {
+  font-size: 55px;
+}
 .logos_and_names .logos_item {
   top: -42px;
   font-size: 55px;
@@ -167,9 +176,15 @@ header .navbar-nav .nav-item:hover {
 .present .present_first_p span {
   font-size: 26px;
 }
+.present h4 {
+  font-size: 38px;
+}
 
 .form_call_back {
   padding-bottom: 150px;
+}
+.form_call_back h3 {
+  font-size: 38px;
 }
 .form_call_back .form-check {
   padding-left: 36px;
@@ -178,6 +193,9 @@ header .navbar-nav .nav-item:hover {
 .stage {
   padding-bottom: 150px;
 }
+.stage h3 {
+  font-size: 55px;
+}
 
 .quality_assurance {
   background-image: url("../images/quality.jpg");
@@ -185,6 +203,7 @@ header .navbar-nav .nav-item:hover {
 }
 .quality_assurance h3 {
   margin-bottom: 83px;
+  font-size: 55px;
 }
 .quality_assurance .quality_item_items {
   font-size: 55px;
@@ -194,7 +213,13 @@ header .navbar-nav .nav-item:hover {
 .contact_us {
   padding: 100px 0 127px;
 }
+.contact_us h3 {
+  font-size: 38px;
+}
 
+footer h3 {
+  font-size: 38px;
+}
 footer .in_social_items {
   background-color: #2B59C3;
   border-radius: 10px;
