--- a/css/style.scss
+++ b/css/style.scss
@@ -141,7 +141,9 @@ header {
 
 .company_style {
   padding: 68px 0 134px;
-
+  h3{
+    font-size: 38px;
+  }
   &_last_p {
     background-color: #2B59C3;
     padding: 11px 13px;
@@ -153,7 +155,10 @@ header {
 
 .portfolio {
   padding: 0 0 100px;
+  h3{
+    font-size: 45px;
 
+  }
   div.row {
     margin-bottom: 100px;
 
@@ -185,7 +190,9 @@ header {
   p {
     margin-bottom: 0;
   }
-
+    h2{
+      font-size: 55px;
+    }
   .logos_item {
     top: -42px;
     font-size: 55px;
@@ -211,10 +218,17 @@ header {
     & span{
       font-size: 26px;
     }
+
+  }
+  h4{
+    font-size: 38px;
   }
 }
 
 .form_call_back {
+  h3{
+    font-size: 38px;
+  }
   .form-check {
     padding-left: 36px;
   }
@@ -224,6 +238,9 @@ header {
 
 .stage {
   padding-bottom: 150px;
+  h3{
+    font-size: 55px;
+  }
 }
 
 .dignity {
@@ -236,6 +253,7 @@ header {
 
   h3 {
     margin-bottom: 83px;
+    font-size: 55px;
   }
 
   .quality_item_items {
@@ -246,10 +264,15 @@ header {
 
 .contact_us {
   padding: 100px 0 127px;
+  h3{
+    font-size: 38px;
+  }
 }
 
 footer {
-
+  h3{
+    font-size: 38px;
+  }
   .in_social_items{
     background-color: #2B59C3;
     border-radius: 10px;
